[gd_scene load_steps=6 format=2]

[ext_resource path="res://objects/HUD.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/SeratUltra-1GE24.ttf"

[sub_resource type="DynamicFont" id=2]
size = 24
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=3]
Label/colors/font_color = Color( 0.768627, 0.768627, 0.768627, 1 )
Label/colors/font_color_shadow = Color( 0, 0.00392157, 0.305882, 1 )
Label/fonts/font = SubResource( 2 )
Label/styles/normal = SubResource( 4 )
VSlider/icons/grabber = null
VSlider/icons/grabber_disabled = null
VSlider/icons/grabber_highlight = null
VSlider/icons/tick = null
VSlider/styles/grabber_area = null
VSlider/styles/grabber_area_highlight = null
VSlider/styles/slider = null

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 560.0
margin_bottom = 207.0
rect_scale = Vector2( 1.5, 1.5 )
theme = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 560.0
margin_bottom = 31.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 62.0
margin_bottom = 31.0
text = "Fuel  "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer/HBoxContainer"]
margin_left = 66.0
margin_top = 8.0
margin_right = 560.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 3.0
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 35.0
margin_right = 560.0
margin_bottom = 198.0
theme = SubResource( 3 )
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="VBoxContainer/GridContainer"]
margin_right = 83.0
margin_bottom = 31.0
text = "Time:"

[node name="nothing2" type="Control" parent="VBoxContainer/GridContainer"]
margin_left = 87.0
margin_right = 163.0
margin_bottom = 31.0

[node name="HSlider" type="HSlider" parent="VBoxContainer/GridContainer"]
margin_left = 167.0
margin_right = 560.0
margin_bottom = 31.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 5.0
step = 0.01

[node name="label2" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 39.0
margin_right = 83.0
margin_bottom = 70.0
text = "Forces"

[node name="forces" type="CheckButton" parent="VBoxContainer/GridContainer"]
margin_left = 87.0
margin_top = 35.0
margin_right = 163.0
margin_bottom = 75.0
size_flags_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="time" type="Label" parent="VBoxContainer/GridContainer"]
margin_left = 167.0
margin_top = 39.0
margin_right = 560.0
margin_bottom = 70.0
size_flags_horizontal = 3
text = "0.00"
align = 1

[node name="label3" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 83.0
margin_right = 83.0
margin_bottom = 114.0
text = "Speeds"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="velocity" type="CheckButton" parent="VBoxContainer/GridContainer"]
margin_left = 87.0
margin_top = 79.0
margin_right = 163.0
margin_bottom = 119.0
size_flags_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nothing3" type="Control" parent="VBoxContainer/GridContainer"]
margin_left = 167.0
margin_top = 79.0
margin_right = 560.0
margin_bottom = 119.0

[node name="label4" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 127.0
margin_right = 83.0
margin_bottom = 158.0
text = "Paths"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="path" type="CheckButton" parent="VBoxContainer/GridContainer"]
margin_left = 87.0
margin_top = 123.0
margin_right = 163.0
margin_bottom = 163.0
size_flags_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="VBoxContainer/GridContainer/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="toggled" from="VBoxContainer/GridContainer/forces" to="." method="_on_forces_toggled"]
[connection signal="toggled" from="VBoxContainer/GridContainer/velocity" to="." method="_on_velocity_toggled"]
[connection signal="toggled" from="VBoxContainer/GridContainer/path" to="." method="_on_path_toggled"]
